feat: generate user token
